Render correctly on Safari

--- a/app/assets/css/activity-item.less
+++ b/app/assets/css/activity-item.less
@@ -27,7 +27,7 @@
     cursor: pointer;
   }
 
-  a:hover {
+  a, a:hover {
     text-decoration: none;
   }
 }
